[package]
name = "speedymd"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A CLI tool for setting up Markdown speedily."
readme = "README.md"
homepage = "https://github.com/taga3s/speedymd"
repository = "https://github.com/taga3s/speedymd"
keywords = ["rust", "cli", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
promptuity = "0.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
